@@ -20,7 +20,7 @@
     </modules>
 
     <properties>
-        <java.version>23</java.version>
+        <java.version>24</java.version>
         <spring-boot.version>3.4.0</spring-boot.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
     </properties>
@@ -78,6 +78,10 @@
                         <target>${java.version}</target>
                         <encoding>UTF-8</encoding>
                         <skip>true</skip>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                            <arg>-Xlint:preview</arg>
+                        </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
